# sweeper400-python

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  debug_output.txt  debug_output2.txt  environment.yml  pyproject.toml
.augment/rules/: BASIC.md  analyze.md  measure offline.md  move.md  (+2 more)
scripts/: 0单频检测.py  1步进电机控制.py  2a扫场测量.py  2b扫场绘图.py  2仿真测试.py  2扫场测量.py  3caliber_anemone_test.py  3caliber_octopus_test.py  3数据后处理.py  4caliber_octopus_test.py  4caliber_sardine_test.py  4基线偏移debug.py  5caliber_fishnet_test.py  5multi_speaker_test.py  5speaker_test.py  5多扬声器测试.py  6caliber_octopus.py  6caliber_octopus_test.py  6check_speaker_data.py  6chs_calib_test.py  6power_test.py  7caliber_fishnet.py  7caliber_fishnet_test.py  7freq_calib.py  8fast_sim.py  8freq_calib.py  8演化测量.py  9演化测量.py  9绘图函数调试.py
src/: pyproject.toml
src/sweeper400/: __init__.py  logger.py
src/sweeper400/analyze/: __init__.py  basic_sine.py  calib_util_funcs.py  filter.py  general_signal.py  my_dtypes.py  plot.py  post_process.py  waveform_generator.py
src/sweeper400/calib/: __init__.py  caliber.py
src/sweeper400/config/: __init__.py  exp_config.py  matplotlib_config.py
src/sweeper400/gui/: __init__.py
src/sweeper400/measure/: __init__.py  cont_sync_io.py
src/sweeper400/move/: __init__.py  controller.py
src/sweeper400/sim/: __init__.py  simulator.py  参考代码1（禁止直接使用）.py  参考代码2（禁止直接使用）.py  参考代码（禁止直接使用）.py
src/sweeper400/use/: __init__.py  caliber.py  evolver.py  feedback_funcs.py  sweeper.py  sweeper_core.py
tests/: ignore_me1.py  ignore_me2.py  manual_test_caliber.py
(+25 files in other folders)
